[tool.poetry]
name = "bank-widget"
version = "1.0.0"
description = "Виджет для отображения банковских операций"
authors = ["Student <student@example.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = ">=4.1.0,<5.0.0"  # Версия для Python 3.8
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | __pycache__
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv/']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
]
